# rhizome

./: Makefile  README.md  Tiltfile  cleanup_mff_resources.py  flake.nix  infra-dev-config.yaml  kind-config.yaml  pyproject.toml  steps.sh  stolon_refactor_plan.md
.github/workflows/: test.yml
.helix/: languages.toml
agent_primers/: components.md  env_data.md  exploration.md  local_test.md  process_handling.md  query_and_request_logging.md  stolon.md  sync.md  table_versioning.md  testing.md  todo.md
agent_primers/rhizome/: env_data.md  process_handling.md  sync.md  table_versioning.md  testing.md  write_operations.md
agent_primers/stolon/: session_tokens.md  stolon.md  token_capture.md
docs/: hello.html  index.html  rhizome.html  search.js  stolon.html  trifolium.html
docs/hello/: cli.html
docs/rhizome/: canned_queries.html  cli.html  client.html  cluster.html  environments.html  git_diff.html  logging.html  models.html  portforward.html  proc.html  query.html  sanitize_helpers.html  serialization.html  server.html  server_models.html  sleeper.html  sync_data.html  sync_report.html  sync_schema.html  table_discovery.html  test_utils.html  tools.html  utils.html
docs/stolon/: api.html  auth_interceptor.html  cli.html  client.html  discover_wrappers.html  environments.html  generate_wrappers.html  get_internal_token.html  models.html  retry_401.html  serialization.html  server.html  sync_spec.html
docs/trifolium/: config.html  util.html
explorations/: README.md  check_enum_values.py  cleanup_test_account.py  explore_demo2_resellers.py  explore_dev1_accounts.py  explore_merchant_plan_groups.py  explore_merchant_terms_acceptance.py  explore_reseller_owners.py  explore_whoami.py  find_reseller_owner_permissions.py  test_enum_issue.py  test_whoami_endpoint.py
future_work/: better_model_sync.md
local_test/: .gitignore  cleanup.sh  create_cluster.sh  mysql-configmap.yaml  mysql-pod.yaml  mysql-service.yaml
nix/: artifactory.nix  codegen.nix  common.nix  constants.nix  docs.nix  nix-analysis.nix  python-analysis.nix  version-bump.nix  version.nix
src/rhizome/: __init__.py  canned_queries.py  cli.py  client.py  client.py.bak  cluster.py  cluster.py.bak  config.py  git_diff.py  logging.py  portforward.py  portforward.py.bak  proc.py  query.py  sanitize_helpers.py  serialization.py  server.py  server_models.py  sleeper.py  sync_data.py  sync_report.py  sync_schema.py  table_discovery.py  (+3 more)
tests/: conftest.py  mocked_subprocesses.py  mocked_table_data.py  test_environment_access.py  test_git_diff.py  test_k8s_mysql.py  test_model_resolution.py  test_na_feesummary.py  test_port.py  test_query_serialization.py  test_result_serialization.py  test_server.py  test_usage.py  utils.py
(+3027 files in other folders)
